--- a/index.html
+++ b/index.html
@@ -28,8 +28,13 @@
 </head>
 
 <body>
+  <div id="overlay" onclick="off()">
+    <div id="text">Bienvenue sur Drone map helper !</div>
+    <p id="subtext">Chargement en cours...</p>
+  </div>
   <div id="map"></div>
   <!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
   <script src="https://openlayers.org/en/v5.1.3/build/ol.js"></script>
   <script src="dist/ol-layerswitcher.js"></script>
