Desactivated all layers by default

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
 <body>
   <div id="overlay" onclick="off()">
     <div id="text">Bienvenue sur Drone map helper !</div>
-    <p id="subtext">Chargement en cours...</p>
+    <p id="subtext">Drone map helper vous permet de parcourir les différents éléments importants à savoir avant de
+      faire voler son drone. </br></br>
+      Vous pouvez combiner plusieurs couches afin de voir où se trouvent les zones interdites de
+      vol. Par défaut, toutes les couches sont non-visibles, il vous faut les ajouter vous-même !</br></br>
+      (Vous pouvez cliquer n'importe où pour fermer ce message.)
+    </p>
   </div>
   <div id="map"></div>
   <!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
