--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 <body>
   <div id="overlay" onclick="off()">
     <div id="text">Bienvenue sur Drone map helper !</div>
-    <p id="subtext">Inspiré de <a href="https://s.geo.admin.ch/70523ae2e5" target="_blank">la carte officielle de l'OFAC</a>, Drone map helper vous permet de parcourir les différents éléments importants à savoir avant de
+    <p id="subtext">Inspiré de <a href="https://s.geo.admin.ch/70523ae2e5" target="_blank">la carte officielle de
+        l'OFAC</a>, Drone map helper vous permet de parcourir les différents éléments importants à savoir avant de
       faire voler son drone.</br></br>
       Vous pouvez combiner plusieurs couches afin de voir où se trouvent les zones interdites de
       vol. Par défaut, les couches interactives sont activées.</br></br>
