--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
     </p>
   </div>
   <div id="map"></div>
-  <div id="info">Cliquez sur des éléments de la carte pour obtenir des informations</div>
+  <div id="info">
+    <label for="track">
+      Utiliser ma position
+      <input id="track" type="checkbox" />
+    </label>
+    Cliquez sur des éléments de la carte pour obtenir des informations</div>
   <!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.core.js"></script>
