--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
   </div>
   <div id="map"></div>
   <div id="info">
+    Cliquez sur des éléments de la carte pour obtenir des informations</div>
+  <div id="tracking">
     <label for="track">
       Utiliser ma position
       <input id="track" type="checkbox" />
     </label>
-    Cliquez sur des éléments de la carte pour obtenir des informations</div>
+  </div>
   <!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.core.js"></script>
