--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <div id="text">Bienvenue sur Drone map helper !</div>
     <p id="subtext">Inspiré de <a href="https://s.geo.admin.ch/70523ae2e5" target="_blank">la carte officielle de
         l'OFAC</a>, Drone map helper vous permet de parcourir les différents éléments importants à savoir avant de
-      faire voler son drone.</br></br>
+      faire voler son drone.<br><br>
       Vous pouvez combiner plusieurs couches afin de voir où se trouvent les zones interdites de
-      vol. Par défaut, les couches interactives sont activées.</br></br>
-      (Vous pouvez cliquer n'importe où pour fermer ce message.)
+      vol. Par défaut, les couches interactives sont activées.<br><br>
+      (Vous pouvez cliquer n'importe où pour fermer ce message)
     </p>
   </div>
   <div id="map"></div>
