--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
       (Vous pouvez cliquer n'importe où pour fermer ce message)
     </p>
   </div>
-  <div id="map"></div>
+  <div id="map">
+    <div id="bloc-input" class="input-group">
+      <input id="adresse" type="text" class="form-control" placeholder="Saisir une adresse, une ville">
+      <span class="input-group-btn">
+        <button id="searchbox" class="btn btn-success" type="button">Rechercher<i class="fa fa-map-marker"></i></button>
+      </span>
+    </div>
+  </div>
   <div id="info">
     Cliquez sur des éléments de la carte pour obtenir des informations</div>
   <div id="tracking">
