--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
   </div>
   <div id="map">
     <div id="bloc-input" class="input-group">
-      <input id="adresse" type="text" class="form-control" placeholder="Saisir une adresse, une ville">
+      <input id="adress" type="text" class="form-control" placeholder="Saisir une adresse, une ville">
       <span class="input-group-btn">
-        <button id="searchbox" class="btn btn-success" type="button">Rechercher<i class="fa fa-map-marker"></i></button>
+        <button id="searchbox" class="btn btn-success" type="button">Rechercher un lieu<i class="fa fa-map-marker"></i></button>
       </span>
     </div>
   </div>
