--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <p id="subtext">Inspiré de <a href="https://s.geo.admin.ch/70523ae2e5" target="_blank">la carte officielle de
         l'OFAC</a>, Drone map helper vous permet de parcourir les différents éléments importants à savoir avant de
       faire voler son drone.<br><br>
+      Afin de vous offrir la meilleure expérience possible, merci de désactiver vos bloqueurs de publicités pour cette
+      application, cette ils peuvent empêcher le chargement de certaines données.<br><br>
       Vous pouvez combiner plusieurs couches afin de voir où se trouvent les zones interdites de
       vol. Par défaut, les couches interactives sont activées.<br><br>
       (Vous pouvez cliquer n'importe où pour fermer ce message)
