Added some new layers

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       Afin de vous offrir la meilleure expérience possible, merci de désactiver vos bloqueurs de publicités pour cette
       application, cette ils peuvent empêcher le chargement de certaines données.<br><br>
       Vous pouvez combiner plusieurs couches afin de voir où se trouvent les zones interdites de
-      vol. Par défaut, les couches interactives sont activées.<br><br>
+      vol ainsi que les conditions météorologiques. Par défaut, les couches interactives sont activées.<br><br>
       (Vous pouvez cliquer n'importe où pour fermer ce message)
     </p>
   </div>
