--- a/index.html
+++ b/index.html
@@ -5,26 +5,30 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="description" content="Drone map helper vous permet de parcourir les différents éléments importants à savoir avant de faire voler son drone. Afin de vous offrir la meilleure expérience possible, merci de
+    désactiver vos bloqueurs de publicités pour cette application, cette ils peuvent empêcher le chargement de certaines données. Vous pouvez combiner plusieurs couches afin de voir où se trouvent les
+    zones interdites de vol ainsi que les conditions météorologiques. Par défaut, les couches interactives sont activées." />
+  <meta name="keywords" content="drone, map, help, helper, swiss, suisse, carte drone, ofac, aeronautique" />
+  <meta name="author" content="Julien Muggli" />
   <title>Drone map helper</title>
-  <!-- Differents favicon for desktop and mobile devices -->
-  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-  <link rel="manifest" href="favicon/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
-  <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
+  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png" />
+  <link rel="manifest" href="favicon/manifest.json" />
+  <meta name="msapplication-TileColor" content="#ffffff" />
+  <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png" />
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width" />
   <link rel="stylesheet" href="https://openlayers.org/en/v5.1.3/css/ol.css" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -32,39 +36,45 @@
 <body>
   <div id="overlay" onclick="off()">
     <div id="text">Bienvenue sur Drone map helper !</div>
-    <p id="subtext">Inspiré de <a href="https://s.geo.admin.ch/70523ae2e5" target="_blank">la carte officielle de
-        l'OFAC</a>, Drone map helper vous permet de parcourir les différents éléments importants à savoir avant de
-      faire voler son drone.<br><br>
-      Afin de vous offrir la meilleure expérience possible, merci de désactiver vos bloqueurs de publicités pour cette
-      application, cette ils peuvent empêcher le chargement de certaines données.<br><br>
-      Vous pouvez combiner plusieurs couches afin de voir où se trouvent les zones interdites de
-      vol ainsi que les conditions météorologiques. Par défaut, les couches interactives sont activées.<br><br>
+    <p id="subtext">
+      Inspiré de
+      <a href="https://s.geo.admin.ch/70523ae2e5" target="_blank">la carte officielle de l'OFAC</a>, Drone map helper
+      vous permet de parcourir les différents éléments
+      importants à savoir avant de faire voler son drone.<br /><br />
+      Afin de vous offrir la meilleure expérience possible, merci de
+      désactiver vos bloqueurs de publicités pour cette application, cette ils
+      peuvent empêcher le chargement de certaines données.<br /><br />
+      Vous pouvez combiner plusieurs couches afin de voir où se trouvent les
+      zones interdites de vol ainsi que les conditions météorologiques. Par
+      défaut, les couches interactives sont activées.<br /><br />
       (Vous pouvez cliquer n'importe où pour fermer ce message)
     </p>
   </div>
   <div id="map">
     <div id="bloc-input" class="input-group">
-      <input id="adress" type="text" class="form-control" placeholder="Saisir une adresse, une ville">
+      <input id="adress" type="text" class="form-control" placeholder="Saisir une adresse, une ville" />
       <span class="input-group-btn">
-        <button id="searchbox" class="btn btn-success" type="button">Rechercher un lieu<i class="fa fa-map-marker"></i></button>
+        <button id="searchbox" class="btn btn-success" type="button">
+          Rechercher un lieu<i class="fa fa-map-marker"></i>
+        </button>
       </span>
     </div>
   </div>
   <div id="info">
-    Cliquez sur des éléments de la carte pour obtenir des informations</div>
+    Cliquez sur des éléments de la carte pour obtenir des informations
+  </div>
   <div id="tracking">
     <label for="track">
-      Utiliser ma position
-      <input id="track" type="checkbox" />
+      Utiliser ma position <input id="track" type="checkbox" />
     </label>
   </div>
 
-  <!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.core.js"></script>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
   <script src="https://openlayers.org/en/v5.1.3/build/ol.js"></script>
   <script src="dist/ol-layerswitcher.js"></script>
+  <script src="api/api.js"></script>
   <script src="js/script.js"></script>
 </body>
 
