--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
   <script src="https://openlayers.org/en/v5.1.3/build/ol.js"></script>
   <script src="dist/ol-layerswitcher.js"></script>
-  <script src="api/api.js"></script>
+  <script src="https://muggli.one/heig/geoinf-app/api/api.js"></script>
   <script src="js/script.js"></script>
 </body>
 
