Added some style

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- Julien Muggli - 2019 -->
 
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
   <meta charset="utf-8" />
@@ -52,10 +52,10 @@
   </div>
   <div id="map">
     <div id="bloc-input" class="input-group">
-      <input id="adress" type="text" class="form-control" placeholder="Saisir une adresse, une ville" />
+      <input id="adress" type="text" class="form-control" placeholder="Saisir une adresse, une ville ou un lieu..." />
       <span class="input-group-btn">
         <button id="searchbox" class="btn btn-success" type="button">
-          Rechercher un lieu<i class="fa fa-map-marker"></i>
+          Rechercher<i class="fa fa-map-marker"></i>
         </button>
       </span>
     </div>
