--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Drone map helper vous permet de parcourir les différents éléments importants à savoir avant de faire voler son drone. Afin de vous offrir la meilleure expérience possible, merci de
     désactiver vos bloqueurs de publicités pour cette application, cette ils peuvent empêcher le chargement de certaines données. Vous pouvez combiner plusieurs couches afin de voir où se trouvent les
     zones interdites de vol ainsi que les conditions météorologiques. Par défaut, les couches interactives sont activées." />
@@ -34,7 +35,7 @@
 </head>
 
 <body>
-  <div id="overlay" onclick="off()">
+  <div id="overlay" onclick="off(); $('#content').unfold({duration: 1500, slices: 5})">
     <div id="text">Bienvenue sur Drone map helper !</div>
     <p id="subtext">
       Inspiré de
@@ -50,30 +51,34 @@
       (Vous pouvez cliquer n'importe où pour fermer ce message)
     </p>
   </div>
-  <div id="map">
-    <div id="bloc-input" class="input-group">
-      <input id="adress" type="text" class="form-control" placeholder="Saisir une adresse, une ville ou un lieu..." />
-      <span class="input-group-btn">
-        <button id="searchbox" class="btn btn-success" type="button">
-          Rechercher<i class="fa fa-map-marker"></i>
-        </button>
-      </span>
+  <span id="content">
+    <div id="map">
+      <div id="bloc-input" class="input-group">
+        <input id="adress" type="text" class="form-control" placeholder="Saisir une adresse, une ville ou un lieu..." />
+        <span class="input-group-btn">
+          <button id="searchbox" class="btn btn-success" type="button">
+            Rechercher<i class="fa fa-map-marker"></i>
+          </button>
+        </span>
+      </div>
     </div>
-  </div>
-  <div id="info">
-    Cliquez sur des éléments de la carte pour obtenir des informations
-  </div>
-  <div id="tracking">
-    <label for="track">
-      Utiliser ma position <input id="track" type="checkbox" />
-    </label>
-  </div>
+    <div id="info">
+      Cliquez sur des éléments de la carte pour obtenir des informations
+    </div>
+    <div id="tracking">
+      <label for="track">
+        Utiliser ma position <input id="track" type="checkbox" />
+      </label>
+    </div>
+  </span>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.core.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
   <script src="https://openlayers.org/en/v5.1.3/build/ol.js"></script>
   <script src="dist/ol-layerswitcher.js"></script>
+  <script src="js/unfold.js"></script>
   <script src="https://muggli.one/heig/geoinf-app/api/api.js"></script>
   <script src="js/script.js"></script>
 </body>
