--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
 </head>
 
 <body>
-  <div id="overlay" onclick="off(); $('#content').unfold({duration: 1500, slices: 5})">
+  <div id="overlay" onclick="off()">
     <div id="text">Bienvenue sur Drone map helper !</div>
     <p id="subtext">
       Inspiré de
-      <a href="https://s.geo.admin.ch/70523ae2e5" target="_blank">la carte officielle de l'OFAC</a>, Drone map helper
+      <a href="https://map.geo.admin.ch/?layers=ch.bazl.luftfahrthindernis,ch.bazl.einschraenkungen-drohnen,ch.bafu.bundesinventare-vogelreservate,ch.bafu.bundesinventare-jagdbanngebiete&lang=fr&topic=aviation&bgLayer=ch.swisstopo.pixelkarte-grau&layers_visibility=false,true,true,true&catalogNodes=1379,2863&layers_opacity=1,0.6,0.75,0.75"
+        target="_blank">la carte officielle de l'OFAC</a>, Drone map
+      helper
       vous permet de parcourir les différents éléments
       importants à savoir avant de faire voler son drone.<br /><br />
       Afin de vous offrir la meilleure expérience possible, merci de
