Added humidity legend

--- a/index.html
+++ b/index.html
@@ -72,6 +72,24 @@
         Utiliser ma position <input id="track" type="checkbox" />
       </label>
     </div>
+    <div id="displayLegends">
+      <label for="displayLegends">
+        Afficher les légendes <input id="legends" type="checkbox" />
+      </label>
+    </div>
+    <div id="legend1">
+      <div class='legend-title'>Niveau d'humidité en %</div>
+      <div class='legend-scale'>
+        <ul class='legend-labels'>
+          <li><span style='background:#ff1414;'></span>- 10</li>
+          <li><span style='background:#e4d022;'></span>20 - 40</li>
+          <li><span style='background:#47ff56;'></span>40 - 60</li>
+          <li><span style='background:#42e1fd;'></span>60 - 80</li>
+          <li><span style='background:#6613ff;'></span>+ 80</li>
+        </ul>
+      </div>
+
+    </div>
   </span>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
