--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       (Vous pouvez cliquer n'importe où pour fermer ce message)
     </p>
   </div>
-  <span id="content">
+  <div id="content">
     <div id="map">
       <div id="bloc-input" class="input-group">
         <input id="adress" type="text" class="form-control" placeholder="Saisir une adresse, une ville ou un lieu..." />
@@ -77,7 +77,7 @@
         Afficher les légendes <input id="legends" type="checkbox" />
       </label>
     </div>
-  </span>
+  </div>
   <div>
     <div id="legend1" display="none">
       <div class='legend-title'>Niveau d'humidité en %</div>
