--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </label>
     </div>
   </div>
-  <div>
+  <div id="legendsboxes">
     <div id="legend1" display="none">
       <div class='legend-title'>Niveau d'humidité en %</div>
       <div class='legend-scale'>
