--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Drone map helper vous permet de parcourir les différents éléments importants à savoir avant de faire voler son drone. Afin de vous offrir la meilleure expérience possible, merci de
+  <meta name="description"
+    content="Drone map helper vous permet de parcourir les différents éléments importants à savoir avant de faire voler son drone. Afin de vous offrir la meilleure expérience possible, merci de
     désactiver vos bloqueurs de publicités pour cette application, cette ils peuvent empêcher le chargement de certaines données. Vous pouvez combiner plusieurs couches afin de voir où se trouvent les
     zones interdites de vol ainsi que les conditions météorologiques. Par défaut, les couches interactives sont activées." />
   <meta name="keywords" content="drone, map, help, helper, swiss, suisse, carte drone, ofac, aeronautique" />
@@ -43,9 +44,9 @@
         target="_blank">la carte officielle de l'OFAC</a>, Drone map
       helper
       vous permet de parcourir les différents éléments
-      importants à savoir avant de faire voler son drone.<br /><br />
+      importants à savoir avant de faire voler votre drone.<br /><br />
       Afin de vous offrir la meilleure expérience possible, merci de
-      désactiver vos bloqueurs de publicités pour cette application, cette ils
+      désactiver vos bloqueurs de publicités pour cette application, car ils
       peuvent empêcher le chargement de certaines données.<br /><br />
       Vous pouvez combiner plusieurs couches afin de voir où se trouvent les
       zones interdites de vol ainsi que les conditions météorologiques. Par
@@ -108,7 +109,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.core.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
+  <script
+    src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL">
+  </script>
   <script src="https://openlayers.org/en/v5.1.3/build/ol.js"></script>
   <script src="dist/ol-layerswitcher.js"></script>
   <script src="js/unfold.js"></script>
