--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png" />
   <meta name="theme-color" content="#ffffff" />
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width" />
-  <link rel="stylesheet" href="https://openlayers.org/en/v5.1.3/css/ol.css" />
+  <link rel="stylesheet" href="css/OpenLayers/ol.css" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -109,13 +109,13 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.core.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script
+  <!-- <script
     src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL">
-  </script>
-  <script src="https://openlayers.org/en/v5.1.3/build/ol.js"></script>
+    </script> -->
+  <script src="./js/ol.js"></script>
   <script src="dist/ol-layerswitcher.js"></script>
   <script src="js/unfold.js"></script>
-  <script src="https://muggli.one/heig/geoinf-app/api/api.js"></script>
+  <script src="https://www.muggli.one/heig/geoinf-app/api/api.js"></script>
   <script src="js/script.js"></script>
 </body>
 
